:bug: Fix header z-index

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 2;
+    z-index: 3;
 
     &__content {
         align-items: center;
